Thu Oct 12 11:15:28 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* gss-misc.c (recv_token): When continuing partial read, decrease
		number of bytes to read.

Sun Oct  8 14:26:25 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* gss-misc.c (recv_token): When looping for partial read from
		network, start reading in the middle of the token.

Wed Sep 27 18:36:06 1995  Theodore Y. Ts'o  <tytso@dcl>

	* gss-client.c (main): Set display_file to be stdout.

	* gss-server.c (main): Set display_file to 0 if using inetd;
		otherwise, set it to be stdout.

	* gss-misc.c (send_token, recv_token, display_status): If
	        display_file is null, don't set it to stderr; just don't
		print the log message instead.  Needed for inetd operation.

Sat Sep 16 03:34:59 1995  Theodore Y. Ts'o  <tytso@dcl>

	* gss-server.c (sign_server): Only try using gss_export_context
		and gss_import_context if the dov2 flag has been set.
		(server_establish_context): Make sure the client
		gss_name_t is released.
		(main): Add a -once option which causes the gss-server to
		exit after processing one client.  Allows purify to report
		memory leaks.

Thu Sep 14 22:44:44 1995  Theodore Y. Ts'o  <tytso@dcl>

	* gss-server.c (create_socket): add setsockopt SO_REUSEADDR so
		that the socket can be reused right away.

Mon Sep  4 14:19:03 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* gss-misc.c: Either include stdlib.h or declare malloc.

	* configure.in: Check for stdlib.h

Thu Aug 31 11:35:07 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Add -DUSE_AUTOCONF_H and -DGSSAPI_V2 to enable usage
		of autoconf.h in gssapi.h and to enable V2 features in local
		modules.
	* gss-client.c, gss-server.c - Add -v2 switch to use V2 features.
		Clean up V2 argument changes.
	* gss-misc.c - Clean up V2 argument change.


Tue Aug 29 13:24:50 EDT 1995	Paul Park	(pjpark@mit.edu)
	* gss-{client,server}.c - Test gss_{ex,im}port_sec_context().


Fri Jul 7 15:41:47 EDT 1995	Paul Park	(pjpark@mit.edu)